--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/retro-reader-pwa/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1a1a1a" />
     <meta name="description" content="A PWA for reading and bookmarking retro game guides" />
+    <link rel="manifest" href="/retro-reader-pwa/manifest.webmanifest" />
+    <link rel="apple-touch-icon" href="/retro-reader-pwa/apple-touch-icon.png" />
     <title>Retro Reader PWA</title>
   </head>
   <body>
